k8s/applications/tinymediamanager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinymediamanager
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: tinymediamanager
          image: tinymediamanager/tinymediamanager:5.1.5
          ports:
            - name: ingress
              containerPort: 4000
          volumeMounts:
            - name: tinymediamanager
              mountPath: /data
            - name: libraries
              mountPath: /media/movies
              subPath: movies/sd
            - name: libraries
              mountPath: /media/tvshows
              subPath: tv/sd
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 0.1
              memory: 1Gi
      volumes:
        - name: tinymediamanager
          persistentVolumeClaim:
            claimName: tinymediamanager
        - name: libraries
          persistentVolumeClaim:
            claimName: libraries
