k8s/applications/tinymediamanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinymediamanager
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4000
      targetPort: http
